[gd_scene load_steps=25 format=3 uid="uid://bxlc8iwg3fpye"]

[ext_resource type="Script" uid="uid://4gmo44k35hrg" path="res://scripts/goblin.gd" id="1_gsl6h"]
[ext_resource type="Resource" uid="uid://cwtjs8c40h485" path="res://inventory/items/resources/Item-2-MUSH.tres" id="2_5qxdi"]
[ext_resource type="Texture2D" uid="uid://dsfts8nup7vyn" path="res://art/Factions/Goblins/Troops/Torch/Red/Torch_Red.png" id="2_hc4ni"]
[ext_resource type="PackedScene" uid="uid://dq16uubywrowm" path="res://components/health_component.tscn" id="3_5qxdi"]
[ext_resource type="Script" uid="uid://d1lpmbn2iem23" path="res://components/health_component.gd" id="4_cxxf0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0oa8j"]
atlas = ExtResource("2_hc4ni")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7jsn"]
atlas = ExtResource("2_hc4ni")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lw5s"]
atlas = ExtResource("2_hc4ni")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvje8"]
atlas = ExtResource("2_hc4ni")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_tae8r"]
atlas = ExtResource("2_hc4ni")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmkob"]
atlas = ExtResource("2_hc4ni")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2pek"]
atlas = ExtResource("2_hc4ni")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3on1b"]
atlas = ExtResource("2_hc4ni")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk5gg"]
atlas = ExtResource("2_hc4ni")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1ogt"]
atlas = ExtResource("2_hc4ni")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufkly"]
atlas = ExtResource("2_hc4ni")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_quho1"]
atlas = ExtResource("2_hc4ni")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d80ub"]
atlas = ExtResource("2_hc4ni")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_pul1y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0oa8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7jsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lw5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvje8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tae8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmkob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2pek")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3on1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk5gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1ogt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufkly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quho1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d80ub")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qipyy"]
radius = 15.0
height = 36.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bq2bk"]
size = Vector2(42, 66)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ft8do"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5wwv6"]
bg_color = Color(0.858579, 0, 0.166135, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_hc4ni"]
radius = 192.01

[node name="Goblin" type="CharacterBody2D"]
script = ExtResource("1_gsl6h")
item = ExtResource("2_5qxdi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_pul1y")
animation = &"attack"
autoplay = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 8)
shape = SubResource("CapsuleShape2D_qipyy")

[node name="AreaAttack" type="Area2D" parent="."]
position = Vector2(-6, 2)
scale = Vector2(-1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttack"]
position = Vector2(-44, -3)
shape = SubResource("RectangleShape2D_bq2bk")
one_way_collision_margin = 0.0
debug_color = Color(0.921468, 0.23476, 0.392542, 0.42)

[node name="Components" type="Node" parent="."]

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("progress_bar") instance=ExtResource("3_5qxdi")]
position = Vector2(2, -59)
script = ExtResource("4_cxxf0")
progress_bar = NodePath("../../ProgressBar")
current_health = 100

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 90
y_sort_enabled = true
offset_left = -24.0
offset_top = -46.0
offset_right = 12.0
offset_bottom = -40.0
scale = Vector2(1.37649, 0.543279)
theme_override_styles/background = SubResource("StyleBoxFlat_ft8do")
theme_override_styles/fill = SubResource("StyleBoxFlat_5wwv6")
show_percentage = false

[node name="Vision" type="Area2D" parent="."]

[node name="Range" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_hc4ni")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="AreaAttack" to="." method="_on_area_attack_body_entered"]
[connection signal="body_exited" from="AreaAttack" to="." method="_on_area_attack_body_exited"]
